--- a/.vitepress/theme/styles/global.css
+++ b/.vitepress/theme/styles/global.css
@@ -11,3 +11,18 @@
 	);
 	--vp-home-hero-image-filter: blur(150px);
 }
+.vp-doc blockquote {
+	padding: 10px 16px;
+	border-left: 5px solid var(--vp-c-divider);
+	background-color: #f1f1f1;
+}
+.vp-doc blockquote p {
+	font-size: 14px !important;
+}
+
+.dark .vp-doc blockquote {
+	background-color: #272626;
+}
+li::marker {
+	color: #d1d5db;
+}
